feature: side menu entry for transporter.

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
   "web_accessible_resources": [
     "imgs/army.png",
     "imgs/fleet.png",
-    "imgs/res.png"
+    "imgs/res.png",
+    "imgs/transporter.png"
   ],
 
   "permissions": [
