--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
    } ],
 
   "web_accessible_resources": [
+    "imgs/ally_message.png",
     "imgs/army.png",
     "imgs/fleet.png",
     "imgs/res.png",
